Closed Bug 1408293 Opened 7 years ago Closed 7 years ago

stylo: layout/reftests/bugs/486848-1.xul crashes with "Resolving style on unstyled element"

Categories

(Core :: CSS Parsing and Computation, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla58
Tracking Status
firefox57 --- wontfix
firefox58 --- fixed

People

(Reporter: xidorn, Assigned: xidorn)

References

Details

Attachments

(1 file)

(Note that this is filed for annotating tests in the progress of bug 1407847. The test is not going to fail without patch there, because XUL is still using Gecko backend at the moment.) Dynamically inserting a new <listitem> into <listbox>. Not sure why it's crashing.
Listbox is pretty weird and has custom notification stuff. It probably calls into style or what not.
I realized that bug 1407865 is inserting <listitem> into <listbox> as well, so maybe that's the same bug here.
Blocks: 1407865
Comment on attachment 8921770 [details] Bug 1408293 - Eagerly style new children inserted in XUL listbox. https://reviewboard.mozilla.org/r/192794/#review198438 r=me
Attachment #8921770 - Flags: review?(bzbarsky) → review+
Pushed by xquan@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f225a5860ff4 Eagerly style new children inserted in XUL listbox. r=bz
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
Assignee: nobody → xidorn+moz
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: