Bug 1408293 - Eagerly style new children inserted in XUL listbox. r=bz

MozReview-Commit-ID: HLATTkLd1X8